[package]
name = "cheetos"
version = "0.1.0"
authors = ["inhibitor1217 <inhibitor@kaist.ac.kr>"]
edition = "2021"

[build-dependencies]
bootloader = "0.11.0"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dev-dependencies]
tests_default = { path = "tests/default", artifact = "bin", target = "x86_64-unknown-none" }
tests_runner = { path = "tests/runner" }

[workspace]
members = [
  "kernel",
  "tests/default",
  "tests/runner",
]
