[package]
name = "cheetos"
version = "0.1.0"
authors = ["inhibitor1217 <inhibitor@kaist.ac.kr>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"

[build-dependencies]
bootloader = { git = "https://github.com/inhibitor1217/bootloader", tag = "v0.11.1-alpha.0" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dev-dependencies]
kernel_test = { path = "kernel_test" }
tests_default = { path = "tests/default", artifact = "bin", target = "x86_64-unknown-none" }
tests_runner = { path = "tests/runner" }
tests_threads = { path = "tests/threads", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = [
  "kernel",
  "kernel_test",
  "tests/default",
  "tests/runner",
  "tests/threads"
]
